# stock_app

./: Cargo.toml  build.rs
polygon_service/: Cargo.toml
polygon_service/src/: domain.rs  dto.rs  lib.rs  service.rs
src/: main.rs
ui/: appwindow.slint  mainwindow.slint
