workspace = { members = ["polygon_service"] }

[package]
name = "tut_proj"
version = "0.1.0"
authors = ["gphodgson <geoffphodgson@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.6"
polygon_service = {path = "./polygon_service"}
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }

[build-dependencies]
slint-build = "1.6"
